implemented swagger docs
